--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -1,25 +1,32 @@
-name: Publish the Website to cPanel
-on:
-  push:
-    branches:
-      - main
-jobs:
-  FTP-Deploy-Action:
-    name: FTP-Deploy-Action
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4.1.1
-      - name: Use Node.js 22
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-      - name: Build Project
-        run: |
-          npm install
-          npm run build
-      - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
+
+
+    name: Publish the Website to cPanel
+     
+    on:
+      push:
+        branches:
+          - main
+     
+    jobs:
+      web-deploy:
+        name: Deploy Website
+        runs-on: ubuntu-latest
+     
+        steps:
+          - name: Checkout Code
+            uses: actions/checkout@v4
+     
+          - name: Sync Files via FTP
+            uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+            with:
+              server: ${{ secrets.FTP_SERVER }}
+              username: ${{ secrets.FTP_USERNAME }}
+              password: ${{ secrets.FTP_PASSWORD }}
+              port: 21
+              protocol: ftp
+              local-dir: ./
+              exclude: |
+                .git/**
+                .git*
+                **/.git/**
+
